Internal bug 100 - Edit Data has errors when an Import Data operation is done on Editing Worksheet
- Added code to change the enabled status of the Edit action label when entering and exiting Editing Mode since once in Edit Mode it must be closed before opening another Edit session. Added code to avoid data import onto a worksheet that has an ongoing Edit session open for a table, a dialog is shown asking the user if he wants to do the import on a new Excel Worksheet. Changed the way editing sessions are stored to support mainting them for Tables in different Schemas and to support different Workbooks as well as different Worksheets (Panels\DBObjectSelectionPanel.cs, Forms\EditDataDialog.cs, Controls\TaskPaneControl.cs).
- Added some resource strings. (Properties\Resources.Designer.cs, Properties\Resources.resx).

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -492,4 +492,10 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="EditDataDeleteLastRowNotPermittedErrorTitle" xml:space="preserve">
     <value>Deleting last row for insertions is not permitted.</value>
   </data>
+  <data name="WorkSheetInEditModeWarningDetail" xml:space="preserve">
+    <value>Data Imports cannot be done into a Worksheet in Edit Mode, do you want to import the data into a new Worksheet?</value>
+  </data>
+  <data name="WorkSheetInEditModeWarningTitle" xml:space="preserve">
+    <value>Active Workhsheet in Edit Mode</value>
+  </data>
 </root>
