--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+- Added code to change the enabled status of the Edit action label when entering and exiting Editing Mode since once in Edit Mode it must be closed before opening
+  another Edit session. Added code to avoid data import onto a worksheet that has an ongoing Edit session open for a table, a dialog is shown asking the user if he
+  wants to do the import on a new Excel Worksheet. Changed the way editing sessions are stored to support mainting them for Tables in different Schemas and to support
+  different Workbooks as well as different Worksheets. (Internal bug 100 - Edit Data has errors when an Import Data operation is done on Editing Worksheet).
 - Bumped AssemblyVersion to 1.1.0.
 - Changed code to enable Revert Changes button when the Auto-Commit checkbox is not checked and only when there are changes pending to be committed.
   (Internal bug 92 - Edit Data, Revert Changes button remains enabled even if there are no changes to revert).
