--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -121,7 +121,7 @@
     <value>Empty or null DB Schema used for this action.  A valid Schema must be used.</value>
   </data>
   <data name="UnableToRetrieveData" xml:space="preserve">
-    <value>Unable to retrieve data from '{0}'.</value>
+    <value>Unable to retrieve data from {0} '{1}'.</value>
   </data>
   <data name="ConnectionsFileNotFound" xml:space="preserve">
     <value>Workbench connections.xml file not found</value>
@@ -157,7 +157,7 @@
     <value>Are you sure you want to remove the selected column?</value>
   </data>
   <data name="ErrorCreatingNewSchema" xml:space="preserve">
-    <value>An error occurred creating a new schema: {0}</value>
+    <value>An error occurred creating a new schema.</value>
   </data>
   <data name="ColumnMappedOverwriteDetailWarning" xml:space="preserve">
     <value>This column has already been mapped, do you want to overwrite existing mapping?</value>
@@ -165,9 +165,6 @@
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ArrowDown" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ArrowDown.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Error" xml:space="preserve">
-    <value>Error</value>
   </data>
   <data name="CurrentChangesLostConfirmation" xml:space="preserve">
     <value>Current changes will be lost, do you want to continue?</value>
