--- a/CHANGES
+++ b/CHANGES
@@ -52,4 +52,5 @@
 - All operations done through Edit Data use now constructed queries sent directly to MySQL instead of performing the operations via the Connector/NET DataAdapter.
   This way we are consistent on how operations are performed by the Export Data and Append Data operations and ensure the query appearing on the General Query Log
   and the one we display to the users are identical. (Oracle bug 14355970 - CONFIRMATION DETAILS LIE ABOUT SQL ISSUED).
+- Fixed Edit showing exception for unsigned small int is too large for the column. Changes in MySQLDataColumn Class that wasn't assigning the unsigned attribute in constructor.
   
