--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+- Added code to do a better handling of null values and zero dates that work consistently among Import, Export, Append and Edit operations. DateTime.MinValue are
+  treated natively in Excel as a 0.0 value so conversions are performed consistently. (Internal bug 109 - Edit operation can edit a zero value DateTime column).
 - Fixed code to always set an empty string instead of null to the MySQLDataColumn properties that stores MySQL data types (MySQLDataType, RowsFrom1stDataType and
   RowsFrom2ndDataType). Added code to display a warning and color red a column which Data Type has not been set by the user or has been manually cleared.
   (Internal bug 65 - Export excel data freezes when Auto Detect Data Types is off).
