--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+- Fixed code that renames the auto-generated Primary Key column when the Table name changes since it was not detecting if a column with the same name already existed
+  in the table. The column duplication was not actually happening, it looked that way because the automatically generated PK column was not detecting a column had
+  that same name. (Internal bug 110 - Export Data - Column is duplicated when Unique index is checked).
 - Added code to do a better handling of null values and zero dates that work consistently among Import, Export, Append and Edit operations. DateTime.MinValue are
   treated natively in Excel as a 0.0 value so conversions are performed consistently. (Internal bug 109 - Edit operation can edit a zero value DateTime column).
 - Fixed code to always set an empty string instead of null to the MySQLDataColumn properties that stores MySQL data types (MySQLDataType, RowsFrom1stDataType and
