Commit for Oraclebug #14521405 Unhandled exception is thrown when loading MySQL for Excel if Display Mode in Windows is Set to Best Performance.

--- a/CHANGES
+++ b/CHANGES
@@ -20,3 +20,4 @@
   Fixed code to properly change mapped column names when checking/unchecking the "First Row Contains Column Names" checkbox in the Append Data Form.
   (Oracle Bug 14370049 - THE AUTO MAPPING IS NOT WORKING PROPERLY)
 - Disabled Export button when table name is empty (Oracle Bug 14389853 - EXPORT BUTTON IS ENABLED WHEN TABLE NAME IS EMPTY)
+- Commit for Oraclebug #14521405 Unhandled exception is thrown when loading MySQL for Excel.
