Internal bug 114 - Append dialog does not update Mapping type combo when a Manual mapping is done
- Fixed code so when the Automatic Mapping is performed any subsequent change on a mapping resets the mapping to a Manual Mapping. (Forms\AppendDataForm.cs).

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+- Fixed code so when the Automatic Mapping is performed any subsequent change on a mapping resets the mapping to a Manual Mapping.
+  (Internal bug 114 - Append dialog does not update Mapping type combo when a Manual mapping is done).
 - Added code to the InfoDialog class to set the button text to "Show Details" or "Hide Details" depending on the status of the Details text container.
   (Internal bug 64 - InfoDialog Show Details button should change to Hide Details when details are shown).
 - Updated code that prepares a Date value for insertion into the DataTable to consider more scenarios, also updated the code that prepares Date values into string
