--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+- Fixed code to refresh the Import Procedure Form's preview grid's data source to repaint its contents every time the Call button is pressed.
+  (Internal bug 131 - Import Procedure Data - Preview grid shows wrong data after 2nd Call).
 - Added code to re-pull connections after connections are migrated from Excel to Workbench. (Internal bug 59 - Connections list not refreshed after import).
 - Fixed code so when the Automatic Mapping is performed any subsequent change on a mapping resets the mapping to a Manual Mapping.
   (Internal bug 114 - Append dialog does not update Mapping type combo when a Manual mapping is done).
