--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+- Added code to the main wix configuration file to check if a newer version is already installad and if so abort the installtion.
+  (Internal bug 135 - Installer does not check if a newer version is already installed to abort installation).
 - Fixed code to refresh the Import Procedure Form's preview grid's data source to repaint its contents every time the Call button is pressed.
   (Internal bug 131 - Import Procedure Data - Preview grid shows wrong data after 2nd Call).
 - Added code to re-pull connections after connections are migrated from Excel to Workbench. (Internal bug 59 - Connections list not refreshed after import).
