--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -516,4 +516,40 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="MultipleAreasNotSupportedWarningTitle" xml:space="preserve">
     <value>Multiple Areas Not Supported</value>
   </data>
+  <data name="QueryExceedsMaxAllowedPacketError" xml:space="preserve">
+    <value>Query exceeds MAX_ALLOWED_PACKET value; please increase the value of the MAX_ALLOWED_PACKET variable in the MySQL Server configuration.</value>
+  </data>
+  <data name="EditDataCellModificationError" xml:space="preserve">
+    <value>Error modifying cell's value.</value>
+  </data>
+  <data name="EditDataCommittedText" xml:space="preserve">
+    <value>Deleted {0}, Inserted {1}, Updated {2} row(s).</value>
+  </data>
+  <data name="EditDataCommittedWarningsFound" xml:space="preserve">
+    <value>The following {0} warning(s) were generated:</value>
+  </data>
+  <data name="EditDataCommittingText" xml:space="preserve">
+    <value>Deleting {0}, Inserting {1}, Updating {2} row(s) with the following SQL statement(s):</value>
+  </data>
+  <data name="EditDataFormTooltipText" xml:space="preserve">
+    <value>Editing data for:{0}Schema: {1}{0}Table: {2}{0}WorkBook: {3}{0}WorkSheet: {4}</value>
+  </data>
+  <data name="EditDataInvalidValueError" xml:space="preserve">
+    <value>Invalid value for column of type: {0}</value>
+  </data>
+  <data name="EditedDataCommittedError" xml:space="preserve">
+    <value>had errors on commit; changes were rolled back.</value>
+  </data>
+  <data name="EditedDataCommittedSucess" xml:space="preserve">
+    <value>was committed to MySQL successfully.</value>
+  </data>
+  <data name="EditedDataCommittedWarning" xml:space="preserve">
+    <value>was committed to MySQL with warnings.</value>
+  </data>
+  <data name="EditedDataForTable" xml:space="preserve">
+    <value>Edited data for Table {0} </value>
+  </data>
+  <data name="QueryDidNotMatchRowsWarning" xml:space="preserve">
+    <value>Query did not match any rows in the DB, Primary Key values in the row may have changed; please refresh values from the DB.</value>
+  </data>
 </root>
