--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -603,4 +603,7 @@ To be able to make modifications on cells not related to MySQL data please exit 
   <data name="TableDataCopyErrorTitle" xml:space="preserve">
     <value>Error copying table data</value>
   </data>
+  <data name="SplashScreenExcel" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SplashScreenExcel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
